--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = DUE
+
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -191,6 +192,7 @@ src_filter    = ${common.default_src_filter} +<src/HAL/AVR>
 platform      = atmelsam
 board         = due
 src_filter    = ${common.default_src_filter} +<src/HAL/DUE>
+upload_port = COM30 #my
 
 [env:DUE_USB]
 platform      = atmelsam
